[gd_scene load_steps=2 format=3 uid="uid://bkijakqddxwui"]

[ext_resource type="Script" path="res://scenes/gui/BuildingPopup.gd" id="1_e7tyo"]

[node name="BuildingPopup" type="VBoxContainer" groups=["popup"]]
script = ExtResource("1_e7tyo")

[node name="Pickup" type="Button" parent="."]
layout_mode = 2
text = "Pickup"

[node name="Toggle" type="Button" parent="."]
layout_mode = 2
text = "Toggle"

[node name="Delete" type="Button" parent="."]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="Pickup" to="." method="_on_pickup_pressed"]
[connection signal="pressed" from="Toggle" to="." method="_on_toggle_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
